--- a/src/components/PipeGrid/PipeGrid.scss
+++ b/src/components/PipeGrid/PipeGrid.scss
@@ -13,6 +13,12 @@
     position: relative;
     white-space: nowrap;
     padding: 1px;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    @media only screen and (max-width: 480px) {
+      max-height: 40vh;
+    }
   }
 
   .PipeGridRow {
@@ -24,28 +30,5 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-  }
-
-  .PipeGridCell {
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    display: inline-flex;
-    font-size: 28px;
-    height: 32px;
-    justify-content: center;
-    overflow: hidden;
-    position: relative;
-    width: 32px;
-    color: var(--pipe-grid-cell-color);
-
-    &:hover {
-      box-shadow: #c5c5c5 0px 0px 0px 1px;
-      border-radius: 0;
-    }
-  
-    &.isSolved {
-      background-color: var(--pipe-grid-cell-solved-bg)
-    }
   }
 }
