--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,8 @@
     --level-selector-single-level-bg-complete: #e8ffe8;
 
     --pipe-grid-cell-color: #000000;
-    --pipe-grid-cell-solved-bg: lightskyblue;
+    --pipe-grid-cell-solved-bg: #87cefa;
+    --pipe-grid-cell-verifying-incorrect-color: #c93636;
 
     --notification-bg: #f45252;
     --notification-message-color: #ffffff;
@@ -46,6 +47,7 @@
 
     --pipe-grid-cell-color: #ffffff;
     --pipe-grid-cell-solved-bg: #0f2c56;
+    --pipe-grid-cell-verifying-incorrect-color: #c93636;
 
     --notification-bg: #f45252;
     --notification-message-color: #ffffff;
