--- a/src/components/PipeGridCell/PipeGridCell.scss
+++ b/src/components/PipeGridCell/PipeGridCell.scss
@@ -4,16 +4,16 @@
   border: none;
   display: inline-flex;
   font-size: 28px;
-  height: 32px;
   justify-content: center;
   overflow: hidden;
   position: relative;
-  width: 32px;
+  width: 100%;
+  height: 100%;
   color: var(--pipe-grid-cell-color);
   transition: color 500ms;
 
   &:hover {
-    box-shadow: #c5c5c5 0px 0px 0px 1px;
+    box-shadow: inset #c5c5c5 0px 0px 0px 2px;
     border-radius: 0;
     background-color: transparent;
   }
