--- a/src/index.scss
+++ b/src/index.scss
@@ -42,3 +42,9 @@ button {
        pointer-events: none;
     }
 }
+
+input {
+    padding: 5px;
+    border: solid 1px lightgrey;
+    border-radius: 5px;
+}
